--- a/src/style.css
+++ b/src/style.css
@@ -15,12 +15,15 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #00bcd4;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #0097a7;
 }
+
+/* Google Fonts Import */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 body {
   margin: 0;
@@ -28,6 +31,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-family: "Poppins", sans-serif;
 }
 
 h1 {
@@ -47,7 +51,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #00bcd4;
 }
 button:focus,
 button:focus-visible {
@@ -71,7 +75,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #0097a7;
   }
   button {
     background-color: #f9f9f9;
